# scribble

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat
