[tool.poetry]
name = "scribble"
version = "0.1.0"
description = ""
authors = ["Jack Contro <jackcontro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
